--- a/InterviewQuestions/InterviewQuestions.csproj
+++ b/InterviewQuestions/InterviewQuestions.csproj
@@ -42,6 +42,9 @@
     <Compile Include="Question1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question2.cs" />
+    <Compile Include="Question3.cs" />
+    <Compile Include="Question4.cs" />
+    <Compile Include="Question5.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
