--- a/InterviewQuestionsTests/InterviewQuestionsTests.csproj
+++ b/InterviewQuestionsTests/InterviewQuestionsTests.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Question1Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question2Tests.cs" />
+    <Compile Include="Question3Tests.cs" />
+    <Compile Include="Question4Tests.cs" />
+    <Compile Include="Question5Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InterviewQuestions\InterviewQuestions.csproj">
